syntax = "proto3";
package ai.floedb.metacat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.catalog.rpc";

import "common/common.proto";
import "google/protobuf/timestamp.proto";

// ----- Catalog -----

message Catalog {
  ai.floedb.metacat.common.ResourceId resource_id = 1;
  string display_name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
}

message ListCatalogsRequest {
  ai.floedb.metacat.common.PageRequest page = 1;
}
message ListCatalogsResponse {
  repeated Catalog catalogs = 1;
  ai.floedb.metacat.common.PageResponse page = 2;
}

message GetCatalogRequest {
  ai.floedb.metacat.common.ResourceId catalog_id = 1;
}
message GetCatalogResponse {
  Catalog catalog = 1;
}

message CatalogSpec {
  string display_name = 1;
  string description = 2;
  string connector_ref = 3;
  map<string,string> options = 4;
  string policy_ref = 5;
}

message CreateCatalogRequest {
  CatalogSpec spec = 1;
  ai.floedb.metacat.common.IdempotencyKey idempotency = 2;
}
message CreateCatalogResponse {
  Catalog catalog = 1;
  ai.floedb.metacat.common.MutationMeta meta = 2;
}

message UpdateCatalogRequest {
  ai.floedb.metacat.common.ResourceId catalog_id = 1;
  CatalogSpec spec = 2;
  ai.floedb.metacat.common.Precondition precondition = 3;
}
message UpdateCatalogResponse {
  Catalog catalog = 1;
  ai.floedb.metacat.common.MutationMeta meta = 2;
}

message DeleteCatalogRequest {
  ai.floedb.metacat.common.ResourceId catalog_id = 1;
  bool require_empty = 2;
  ai.floedb.metacat.common.Precondition precondition = 3;
}
message DeleteCatalogResponse {
  ai.floedb.metacat.common.MutationMeta meta = 1;
}

// ----- Services -----

service CatalogService {
  rpc ListCatalogs(ListCatalogsRequest) returns (ListCatalogsResponse);
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
  rpc CreateCatalog(CreateCatalogRequest) returns (CreateCatalogResponse);
  rpc UpdateCatalog(UpdateCatalogRequest) returns (UpdateCatalogResponse);
  rpc DeleteCatalog(DeleteCatalogRequest) returns (DeleteCatalogResponse);
}